feat(cash): add pending check payments
